# winter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Winter.toml
.github/workflows/: docker.yml  rust.yml
src/: config.rs  db.rs  main.rs  virus_scan.rs
src/routes/: download.rs  index.rs  serve.rs  upload.rs
src/utils/: result.rs  variables.rs
