[package]
name = "winter"
version = "0.1.0"
authors = ["Paul Makles <paulmakles@gmail.com>", "Luna Nova <her@mint.lgbt>"]
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-web = "4.4.0"
clamav-client = { git = "https://github.com/ectoplasmhq/clamav-client.git" }
content_inspector = "0.2.4"
dotenv = "0.15.0"
env_logger = "0.10.1"
ffprobe = "0.3.3"
futures = "0.3.29"
image = "0.24.7"
imagesize = "0.12.0"
kamadak-exif = "0.5.5"
lazy_static = "1.4.0"
log = "0.4.20"
mime = "0.3.17"
mongodb = "2.7.1"
nanoid = "0.4.0"
once_cell = "1.18.0"
rust-s3 = "0.27.0-rc3"
sanitize-filename = "0.5.0"
serde = { features = ["derive"], version = "1.0.192" }
serde_json = "1.0.108"
tempfile = "3.8.1"
tokio = { features = ["fs", "io-util", "rt", "time"], version = "1.34.0" }
tokio-cron-scheduler = "0.9.4"
toml = "0.8.8"
tree_magic = "0.2.3"
ulid = "1.1.0"
webp = "0.2.6"
